option('help', type: 'boolean', value: true, description: 'Build help')
option('enable-python', type: 'combo', choices: ['yes', 'no', 'auto'], value: 'auto', description: 'Enable python support')
option('libportal', type: 'feature', value: 'auto', description: 'Build plugins requiring libportal')
option('with-plugins', type: 'combo', choices: ['all', 'none', 'auto'], value: 'auto', description: 'Which Totem plugins to compile (default: auto; "all", "none" and "auto" are valid)')
option('enable-gtk-doc', type: 'boolean', value: false, description: 'use gtk-doc to build documentation')
option('profile', type: 'combo', choices: ['default', 'development'], value: 'default', description: 'Build profiles')
option('inspector-page', type:'boolean', value: false, description: 'Whether to build the optional GTK inspector page')
option('ui-tests', type:'boolean', value: true, description: 'Whether to run tests that require a display')
